[package]
name = "parque_concurrente"
version = "0.1.0"
authors = ["franco.cerquetti <fd.cerquetti@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
std-semaphore = "0.1.0"
yaml-rust = "0.4.4"
rand = "0.7.3"
queues = "1.0.2"
lazy_static = "1.4.0"
